--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -3,7 +3,11 @@ name: brew test-bot
 on:
   push:
     branches: [ main, master ]
+    paths-ignore:
+      - 'cmd/dev/**'
   pull_request:
+    paths-ignore:
+      - 'cmd/dev/**'
 
 jobs:
   test-bot:
@@ -23,4 +27,4 @@ jobs:
 
       - name: Run brew test-bot
         run: |
-          brew test-bot --only-tap-syntax --file-filter="^(?!cmd/dev/)"
+          brew test-bot --only-tap-syntax
