--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -4,10 +4,10 @@ on:
   push:
     branches: [ main, master ]
     paths-ignore:
-      - 'cmd/dev/**'
+      - 'scripts/dev/**'
   pull_request:
     paths-ignore:
-      - 'cmd/dev/**'
+      - 'scripts/dev/**'
 
 jobs:
   test-bot:
